# omp-redmine-statistic

grafana_docker/: docker-compose.yml  readme.md
grafana_docker/grafana/: Dockerfile
transfer_data_to_pg/: .gitignore  index.py  pyproject.toml  readme.md  transfer_developers_to_pg.py  transfer_issues_to_pg.py  transfer_time_entries_to_pg.py  transfer_trackers_to_pg.py  transfer_utils.py
