[tool.poetry]
name = "transfer-data-to-pg"
version = "0.1.0"
description = ""
authors = ["avs <avs@omp-system.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMySQL = "^1.0.2"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
